collapse issue resolved

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
-  font-family:nunito, sans-serif;
+  /* font-family:nunito, sans-serif; */
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
